modify yoosee style to orange

--- a/com.yoosee/src/main/res/layout/activity_call.xml
+++ b/com.yoosee/src/main/res/layout/activity_call.xml
@@ -8,7 +8,7 @@
         android:id="@+id/layout_top"
         android:layout_width="match_parent"
         android:layout_height="@dimen/p2p_call_top_bar_height"
-        android:background="@drawable/tab_bar"
+        android:background="@color/colorPrimary"
         >
         
         <TextView
