--- a/com.yoosee/src/main/res/layout/activity_login.xml
+++ b/com.yoosee/src/main/res/layout/activity_login.xml
@@ -9,7 +9,7 @@
         android:id="@+id/layout_title"
         android:layout_width="match_parent"
         android:layout_height="@dimen/title_height"
-        android:background="@drawable/tab_bar" >
+        android:background="@color/colorPrimary" >
 
         <TextView
             android:id="@+id/title_text"
@@ -235,7 +235,8 @@
             android:text="@string/login"
             android:textColor="@color/dialog_title"
             android:textSize="@dimen/text_size_normal" />
-        <Button
+
+        <Button
             android:id="@+id/register"
             android:layout_width="match_parent"
             android:layout_height="@dimen/globel_button_height"
