--- a/com.yoosee/src/main/res/layout/activity_register.xml
+++ b/com.yoosee/src/main/res/layout/activity_register.xml
@@ -8,7 +8,7 @@
         android:id="@+id/layout_title"
         android:layout_width="match_parent"
         android:layout_height="@dimen/title_height"
-        android:background="@drawable/tab_bar" >
+        android:background="@color/colorPrimary" >
 
         <TextView
             android:id="@+id/title_text"
