--- a/com.yoosee/src/main/res/layout/register_form.xml
+++ b/com.yoosee/src/main/res/layout/register_form.xml
@@ -7,7 +7,7 @@
         android:id="@+id/layout_title"
         android:layout_width="match_parent"
         android:layout_height="@dimen/title_height"
-        android:background="@drawable/tab_bar"
+        android:background="@color/colorPrimary"
         android:orientation="vertical" >
         <TextView
             android:layout_width="wrap_content"
