--- a/app/src/main/res/layout/activity_webview.xml
+++ b/app/src/main/res/layout/activity_webview.xml
@@ -1,12 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context="com.amenuo.monitor.activity.WebviewActivity">
 
-</RelativeLayout>
+    <WebView
+        android:id="@+id/webview_webview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1">
+    </WebView>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="44dp"
+        android:background="@color/colorPrimary"
+        android:orientation="horizontal">
+        <View
+            android:id="@+id/webview_progress"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/colorPrimaryDark"/>
+
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="16dp"
+            android:layout_centerVertical="true"
+            android:clickable="true"
+            android:id="@+id/webview_back"
+            android:src="@drawable/webview_back"/>
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginLeft="16dp"
+            android:clickable="true"
+            android:id="@+id/webview_forward"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@id/webview_back"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/webview_forward"/>
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginLeft="16dp"
+            android:clickable="true"
+            android:id="@+id/webview_refresh"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@id/webview_forward"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/webview_refresh"/>
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginLeft="16dp"
+            android:clickable="true"
+            android:id="@+id/webview_close"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@id/webview_refresh"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/webview_close"/>
+    </RelativeLayout>
+</LinearLayout>
