--- a/com.yoosee/src/main/res/drawable/tab_button.xml
+++ b/com.yoosee/src/main/res/drawable/tab_button.xml
@@ -2,5 +2,5 @@
 <selector
   xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true" android:drawable="@color/colorPrimaryDark" />
-    <item android:state_pressed="false" android:drawable="@color/colorPrimaryDark" />
+    <item android:state_pressed="false" android:drawable="@color/colorPrimary" />
 </selector>
