--- a/app/src/main/res/layout/layout_main_lump.xml
+++ b/app/src/main/res/layout/layout_main_lump.xml
@@ -1,20 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="100dp"
+    >
 
     <com.amenuo.monitor.view.MainLumpImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/main_lump_image"
         android:scaleType="center" />
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:adjustViewBounds="true"
+        android:id="@+id/main_lump_icon"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="8dp"
         android:id="@+id/main_lump_text"
         android:textColor="@color/colorIcon"
+        android:background="@drawable/main_lump_bg_shape"
+        android:layout_alignParentBottom="true"
+        android:textAlignment="center"
         android:textSize="18sp" />
 </RelativeLayout>
