--- a/app/src/main/res/layout/activity_follow.xml
+++ b/app/src/main/res/layout/activity_follow.xml
@@ -4,27 +4,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/colorGrayBG"
     android:orientation="vertical"
-    tools:context="com.amenuo.monitor.activity.LiveListActivity">
+    tools:context="com.amenuo.monitor.activity.FollowActivity">
 
     <com.amenuo.monitor.view.TitleBar
-        android:id="@+id/live_list_titlebar"
+        android:id="@+id/follow_titlebar"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         app:leftIcon="@drawable/common_back_icon"
-        app:middleTitle="@string/title_activity_live_list"
+        app:middleTitle="@string/title_activity_follow"
         />
-    <ListView
-        android:id="@+id/live_list_listview"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
+    <com.amenuo.monitor.lib.PinnedHeaderListView
+        android:id="@+id/follow_listview"
         android:layout_width="match_parent"
-        android:scrollbars="none"
         android:layout_height="match_parent"
-        android:divider="@color/colorDivider"
-        android:dividerHeight="1dp"
-        />
+        android:layout_weight="1"
+        android:scrollbars="none"
+        android:divider="@null"/>
 
 </LinearLayout>
