--- a/app/src/main/res/layout/activity_webview.xml
+++ b/app/src/main/res/layout/activity_webview.xml
@@ -1,17 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.amenuo.monitor.activity.WebviewActivity">
 
+    <com.amenuo.monitor.view.TitleBar
+        android:id="@+id/webview_titlebar"
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        app:leftIcon="@drawable/common_back_icon"
+        />
     <WebView
         android:id="@+id/webview_webview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1">
     </WebView>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="44dp"
@@ -21,7 +29,13 @@
             android:id="@+id/webview_progress"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/white"/>
+            android:background="@color/colorGrayBG"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/colorDivider"
+            android:layout_alignParentTop="true"/>
 
         <ImageView
             android:layout_width="30dp"
@@ -52,15 +66,16 @@
             android:layout_toRightOf="@id/webview_forward"
             android:layout_gravity="center_vertical"
             android:src="@drawable/webview_refresh"/>
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginLeft="16dp"
-            android:clickable="true"
-            android:id="@+id/webview_close"
-            android:layout_centerVertical="true"
-            android:layout_toRightOf="@id/webview_refresh"
-            android:layout_gravity="center_vertical"
-            android:src="@drawable/webview_close"/>
+        <!--<ImageView-->
+            <!--android:visibility="gone"-->
+            <!--android:layout_width="30dp"-->
+            <!--android:layout_height="30dp"-->
+            <!--android:layout_marginLeft="16dp"-->
+            <!--android:clickable="true"-->
+            <!--android:id="@+id/webview_close"-->
+            <!--android:layout_centerVertical="true"-->
+            <!--android:layout_toRightOf="@id/webview_refresh"-->
+            <!--android:layout_gravity="center_vertical"-->
+            <!--android:src="@drawable/webview_close"/>-->
     </RelativeLayout>
 </LinearLayout>
