--- a/app/src/main/res/layout/layout_common_titlebar.xml
+++ b/app/src/main/res/layout/layout_common_titlebar.xml
@@ -23,5 +23,6 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/colorDivider"/>
+        android:background="@color/colorDivider"
+        android:layout_alignParentBottom="true"/>
 </RelativeLayout>
