--- a/app/src/main/res/layout/layout_live_list_item.xml
+++ b/app/src/main/res/layout/layout_live_list_item.xml
@@ -5,7 +5,7 @@
     android:orientation="horizontal">
 
     <TextView
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/black"
         android:textSize="18sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -15,9 +15,9 @@
         android:id="@+id/live_list_item_textView"
         />
     <ImageView
-        android:layout_width="16dp"
-        android:layout_height="27dp"
+        android:layout_width="17dp"
+        android:layout_height="26dp"
         android:scaleType="fitCenter"
         android:layout_gravity="center_vertical"
-        android:src="@drawable/more_goto"/>
+        android:src="@drawable/arrow_icon"/>
 </LinearLayout>
