--- a/app/src/main/res/layout/layout_main_lump.xml
+++ b/app/src/main/res/layout/layout_main_lump.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/main_lump_image"
-        android:scaleType="center" />
+        android:scaleType="centerCrop" />
 
     <ImageView
         android:layout_width="77dp"
@@ -28,4 +28,16 @@
         android:textAlignment="center"
         android:gravity="center_vertical"
         android:textSize="18sp" />
+    
+    <ImageView
+        android:id="@+id/main_lump_delete"
+        android:clickable="true"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_alignParentTop="true"
+        android:src="@drawable/main_lump_delete"
+        android:visibility="gone"
+        android:layout_alignParentRight="true"/>
 </RelativeLayout>
