--- a/vitamio/res/layout/mediacontroller.xml
+++ b/vitamio/res/layout/mediacontroller.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="74dp"
+    android:layout_height="wrap_content"
     android:background="@color/mediacontroller_bg"
     android:orientation="vertical" >
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
         android:orientation="horizontal" >
 
         <ImageButton
@@ -16,6 +18,16 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginLeft="5dp"
+            android:background="@drawable/mediacontroller_button"
+            android:contentDescription="@string/mediacontroller_play_pause"
+            android:src="@drawable/mediacontroller_pause" />
+        <ImageButton
+            android:id="@+id/mediacontroller_fullscreen"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="5dp"
             android:background="@drawable/mediacontroller_button"
             android:contentDescription="@string/mediacontroller_play_pause"
             android:src="@drawable/mediacontroller_pause" />
@@ -34,8 +46,8 @@
             style="@style/MediaController_Text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
+            android:layout_toLeftOf="@id/mediacontroller_fullscreen"
             android:layout_marginRight="5dp" />
 
         <SeekBar
@@ -57,6 +69,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
         android:ellipsize="marquee"
+        android:visibility="gone"
         android:singleLine="true" />
 
 </LinearLayout>
