--- a/app/src/main/res/layout/activity_live_list.xml
+++ b/app/src/main/res/layout/activity_live_list.xml
@@ -15,6 +15,14 @@
         app:leftIcon="@drawable/common_back_icon"
         app:middleTitle="@string/title_activity_live_list"
         />
+    <ProgressBar
+        android:id="@+id/live_list_progress"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_gravity="center_horizontal"
+        android:visibility="gone"/>
     <ListView
         android:id="@+id/live_list_listview"
         android:paddingBottom="@dimen/activity_vertical_margin"
